--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -15,16 +15,24 @@
       <a class="logo" href="/" aria-label="homepage">books.</a>
       <nav class="nav">
         <ul>
-          <% if (user) { %>
+          <% if (user) { %> <% if (user.isAdmin) { %>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="/dashboard">dashboard</a>
+          </li>
+          <% } else { %>
           <li class="nav-list__item">
             <a class="nav-list__link" href="/library">my books</a>
           </li>
+          <% } %>
           <li class="nav-list__item">
             <a class="nav-list__link" href="/logout">logout</a>
           </li>
           <% } else { %>
           <li class="nav-list__item">
             <a class="nav-list__link" href="/login">login</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="/register">register</a>
           </li>
           <% } %>
         </ul>
